@@ -5,6 +5,7 @@ bad_md5 = [
 
 good_md5 = [
         '0220442d05c234cb1b421ebfad0f7fd5',
+        '64790a3a3d4b0e9b26560455e80a61c6',
         'd35b9ed3476121d2274673a81f2cc2ad',
         'sentinel'
 ]
